# guidedLP

./: .gitignore  CLAUDE.md  README.md  bench_noise_corrected.py  conversations.md  overall_project_prompt.md  setup.py  test_installation.py
Tool demo/: extended_abstract.md
guidedLP/: .clinerules.md  .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  DEVELOPMENT_SETUP.md  LICENSE  README.md  generate_fixtures.py  pyproject.toml  pytest.ini  readme_docs.md  requirements.txt  setup.py
guidedLP/.claude/agents/: architect.md  mathematician.md  methodologist.md
guidedLP/benchmarks/: projection_chart.py
guidedLP/docs/: reference_implementations.md  tech_requirements.md
guidedLP/docs/api/: README.md  common.md  glp.md  index.md  network.md  timeseries.md
guidedLP/docs/architecture/: glp.md  overview.md
guidedLP/docs/specifications/: spec_glp.md  spec_network.md  spec_timeseries.md
guidedLP/examples/: README.md  example_glp_analysis.py  example_network_analysis.py  example_propagation_animation.py  example_timeseries.py
guidedLP/guidedLP_OLD/: README.md  setup.py
guidedLP/guidedLP_OLD/network/: guidedLabelPropagation.code-workspace  net_create.py  net_utils.py
guidedLP/scripts/: bench_extract_keywords.py  bench_projection.py
guidedLP/src/guidedLP/: __init__.py
guidedLP/src/guidedLP/common/: __init__.py  edgelist.py  exceptions.py  id_mapper.py  logging_config.py  seed_input.py  validators.py
guidedLP/src/guidedLP/glp/: __init__.py  evaluation.py  grid_search.py  propagation.py  utils.py  validation.py
guidedLP/src/guidedLP/network/: __init__.py  analysis.py  backboning.py  communities.py  construction.py  export.py  filtering.py  reduction.py
guidedLP/src/guidedLP/pipelines/: __init__.py  _runtime.py  canonical.py  undirected_bipartite.py  undirected_unipartite.py
guidedLP/src/guidedLP/preprocessing/: __init__.py  _language.py  _nlp.py  _rake.py  _stop_words.py  embedding_extraction.py  embedding_similarity.py  text_extraction.py
guidedLP/src/guidedLP/timeseries/: __init__.py  category_analysis.py  slicing.py  temporal_metrics.py
guidedLP/tests/: __init__.py  test_integration.py
guidedLP/tests/common/: __init__.py  test_exceptions.py  test_id_mapper.py  test_logging_config.py  test_validators.py
guidedLP/tests/glp/: __init__.py  test_evaluation.py  test_noise_category.py  test_propagation.py  test_utils.py  test_validation.py
guidedLP/tests/network/: __init__.py  test_analysis.py  test_backboning.py  test_communities.py  test_construction.py  test_export.py  test_filtering.py
guidedLP/tests/timeseries/: __init__.py  test_category_analysis.py  test_slicing.py  test_temporal_metrics.py
